# perf-analysis-tools

./: AMD-7950X-8,9.sh  Cargo.toml  README.md  analyse-cpu-results.sh  benchmark-chromium.sh  benchmark-servo.sh  chromedriver.nix  convert-pftrace-to-json.sh  custom-chromium-window-commands.sh  custom-servo-window-commands.sh  generate-report-tables.sh  get-tooling-version.sh  isolate-cpu-common.inc  isolate-cpu-for-hypervisor.sh  isolate-cpu-for-shell.sh  query-path.sh  run-all-benchmarks.sh  run-benchmarks-for-cpu.sh  run-benchmarks-for-site.sh  shell.nix  start-mitmproxy.sh  undo-cpu-isolation.sh
src/: analyse.rs  chromium.rs  collect.rs  combined.rs  dom.rs  json.rs  main.rs  report.rs  servo.rs  shell.rs  study.rs  summary.rs
studies/example/: study.toml
